--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,11 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
+    api 'com.google.dagger:dagger:2.25.3'
     api 'com.google.dagger:dagger-android:2.25.3'
     api 'com.google.dagger:dagger-android-support:2.25.3'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.25.3'
+    kapt 'com.google.dagger:dagger-android-processor:2.25.3'
+    kapt 'com.google.dagger:dagger-compiler:2.25.3'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
@@ -56,4 +58,7 @@ dependencies {
 
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.2.3"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc04'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc04'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
 }
