--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc04'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc04'
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 
     implementation 'com.github.GwonHyeok:StickySwitch:0.0.16'
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
