--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: 'androidx.navigation.safeargs.kotlin'
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -69,8 +71,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc04'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc04'
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-
     implementation 'com.github.GwonHyeok:StickySwitch:0.0.16'
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
+    implementation "androidx.work:work-runtime-ktx:2.3.0"
+
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 }
