--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,11 +63,11 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
-    implementation "androidx.room:room-runtime:2.2.3"
-    kapt "androidx.room:room-compiler:2.2.3" // For Kotlin use kapt instead of annotationProcessor
+    implementation "androidx.room:room-runtime:2.3.0-beta01"
+    kapt "androidx.room:room-compiler:2.3.0-beta01" // For Kotlin use kapt instead of annotationProcessor
 
     // optional - Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:2.2.3"
+    implementation "androidx.room:room-ktx:2.3.0-beta01"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc04'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc04'
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
