--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,12 @@ dependencies {
     implementation 'com.github.GwonHyeok:StickySwitch:0.0.16'
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
     implementation "androidx.work:work-runtime-ktx:2.3.0"
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    kapt 'com.github.bumptech.glide:compiler:4.13.0'
+    implementation ('com.github.bumptech.glide:recyclerview-integration:4.13.0') {
+        transitive = false
+    }
+
 
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 }
